FOLREL-612: Update to mod-linked-data Java 21 (#31)
* FOLREL-612: Update to mod-linked-data Java 21

* FOLREL-612: Update buildNode agent